CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )	# set the version

PROJECT( RGB-D-SLAM )	# set the name of the project

SET( CMAKE_CXX_COMPILER "g++" )	# set the compiler
SET( EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin )
SET( LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib )

LINK_DIRECTORIES( ${PROJECT_SOURCE_DIR}/lib )
INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR}/include )
ADD_SUBDIRECTORY( ${PROJECT_SOURCE_DIR}/src )
