CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

PROJECT( RGB-D-SLAM )

SET( CMAKE_CXX_COMPILE_FEATURES "g++" )
SET( CMAKE_BUILD_TYPE Debug )
SET( EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin )
SET( LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib )

LINK_DIRECTORIES( ${PROJECT_SOURCE_DIR}/lib )
INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR}/include )
ADD_SUBDIRECTORY( ${PROJECT_SOURCE_DIR}/src )